--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,65 +1,42 @@
-/* Estilos gerais */
+
+@use '../utils/variables' as var;
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+    font-family: var.$fonte-titulos;
+}
   
-  h1, h2 {
-    color: #333;
-    font-family: 'Roboto Slab', serif;
-  }
-  
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 10px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #D00B0B;
-    font-size: 16px;
-    font-weight: 600;
-    font-family: 'Roboto Slab', serif;
-  }
-  
-  nav ul li a:hover {
-    color: #620404; /* Nova cor ao passar o mouse */
-  }
-  
-  
-  /* Estilos específicos */
+h1, h2 {
+  color: var.$cor-cinzaEscuro;
+  font-family: var.$fonte-titulos;
+}
+
+// BARRA PRINCIPAL.
   header {
-    background-color: #EFEEEC;
+    background-color: var.$cor-fundoLogo;
     padding: 20px;
   }
   
+  //CORPO DO TEXTO
   main {
     max-width: 800px;
     margin: 20px auto;
     padding: 0 20px;
   }
   
+  //ESPAÇO ENTRE AS SECTIONS
   section {
     margin-bottom: 40px;
   }
   
+  // ESPAÇO DOS TÍTULOS PRO
   section h2 {
     margin-bottom: 10px;
   }
   
-  section ul {
-    margin-left: 20px;
-  }
-  
+ 
+  // LINHA ACIMA DO "ENTRE EM CONTATO"
   #contato {
-    border-top: 1px solid #ccc;
+    border-top: 5px solid #ccc;
     padding-top: 20px;
   }
   
