--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,30 +1,34 @@
-// -----------------------------------------------------------------------------
-// Este arquivo contém todas as variáveis Sass de escopo global do aplicativo.
-// -----------------------------------------------------------------------------
+//----------------------------------------------------------------
+//                      VARIÁVEIS DE CORES
+//----------------------------------------------------------------
 
+//* CORES LOGO
+$cor-fundoLogo: #EFEEEC;
+$cor-vermelhoLogo: #971014;
+
+//* CORES PRINCIPAIS
+$cor-vermelhoEscuro: #620404;
+$cor-vermelhoMedio: #7D0808;
+$cor-vermelhoClaro: #D00B0B;
+$cor-cinzaEscuro: #333333;
+
+//* CORES SECUNDÁRIAS
+$cor-branco: #ffff;
+$cor-preto: #000000;
+
+//----------------------------------------------------------------
+//                      TIPOS DE FONTE DE TEXTO
+//----------------------------------------------------------------
 
 /// Família de fonte regular
 /// @type Lista
-$text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
+$fonte-titulos: 'Roboto Slab', serif, 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
 
 /// Família de fonte para código (monoespaçada)
 /// @type Lista
 $code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
 
 
-/// Cor do texto de cópia
-
-//Cores Logo
-$cor-fundoLogo: #EFEEEC;
-$cor-vermelhoLogo: #971014;
-
-//Cores Principais
-$cor-vermelhoEscuro: #620404;
-$cor-vermelhoMedio: #7D0808;
-$cor-vermelhoClaro: #D00B0B;
-
-//Cores Secundárias
-$cor-branco: #ffff;
 
 
 /// Largura máxima do container
