Incluso botão ACIMA

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,8 @@
 @import './base/base';
 @import './base/animations';
 
+@import './components/buttonTopo';
+
 @import './global/reset.scss';
 
 @import './layout/footer';
