--- a/scss/style.css
+++ b/scss/style.css
@@ -43,6 +43,31 @@ section h2 {
   visibility: visible;
 }
 
+.botao-topo {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 0;
+  border: none;
+  outline: none;
+  background-color: #D00B0B;
+  color: white;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.botao-topo:before {
+  content: "↑";
+  font-size: 20px;
+  line-height: 50px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+
 * {
   margin: 0;
   padding: 0;
