Criação do link das paginas

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -10,4 +10,9 @@ footer {
 footer p {
     color: var.$cor-branco;
     text-align: center;
+    padding-top:24px;
+    opacity:0.9;
+    font-size:18px;
+  
 }
+
