--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,14 +1,21 @@
 
 @use '../utils/variables' as var;
 
-body {
+* {
     font-family: var.$fonte-titulos;
 }
   
-h1, h2 {
-  color: var.$cor-cinzaEscuro;
+h1{
+  color: var.$cor-vermelhoMedio;
   font-family: var.$fonte-titulos;
 }
+
+button,
+a {
+  cursor: pointer;
+  transition: all 0.8s;
+}
+
 
 // BARRA PRINCIPAL.
   header {
@@ -38,5 +45,15 @@ h1, h2 {
   #contato {
     border-top: 5px solid #ccc;
     padding-top: 20px;
+  }
+
+  .red-text {
+    color: red;
+    font-weight: bold;
+  }
+
+  .texto-sublinhado {
+    text-decoration: underline;
+    font-weight: bold;
   }
   
