--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,14 +1,18 @@
 
 @import './base/base';
-@import './base/animations';
+
 
 @import './components/buttonTopo';
+@import './components/containerBotao.scss';
 
 @import './global/reset.scss';
 
 @import './layout/footer';
 @import './layout/header';
 @import './layout/navigation';
+
+@import './pages/apoiadores.scss';
+@import './pages/depoimentos.scss';
 
 @import './utils/variables';
 
