--- a/scss/components/_containerBotao.scss
+++ b/scss/components/_containerBotao.scss
@@ -3,10 +3,10 @@
 /* Estilos de botão */
 .button-container {
   border: 0;
-  background-color: transparent;
   outline: none;
-  padding: 10px 25px;
+  padding: 10px 15px;
   border-radius: 35px;
+  background-color: var.$cor-vermelhoClaro;
   text-align: center;
   font-weight: bold;
   font-size: 14px;
@@ -30,7 +30,7 @@
 }
 
 .button-conhecer {
-  background-color: var.$cor-vermelhoLogo;
+  background-color: var.$cor-vermelhoClaro;
   color: var.$cor-branco;
   line-height: 1;
   font-size: 15px;
@@ -39,6 +39,6 @@
 }
 
 .button-conhecer:hover {
-  background-color: var.$cor-vermelhoClaro;
+  background-color: var.$cor-vermelhoMedio;
   color: var.$cor-branco;
 }
