--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 @use '../utils/variables' as var; //abreviação de variables VAR.
 
 footer {
-    background-color: var.$cor-vermelhoEscuro;
+    background-color: var.$cor-cinzaEscuro;
     padding-top: 25px;
     padding-bottom: 25px;
 
