--- a/scss/style.css
+++ b/scss/style.css
@@ -79,6 +79,32 @@ section h2 {
   outline: none;
   padding: 10px 15px;
   border-radius: 35px;
+  background-color: transparent;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.button-container2 {
+  border: 0;
+  outline: none;
+  padding: 10px 15px;
+  border-radius: 35px;
+  background-color: #620404;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.button-container3 {
+  border: 0;
+  outline: none;
+  padding: 10px 15px;
+  border-radius: 35px;
   background-color: #D00B0B;
   text-align: center;
   font-weight: bold;
@@ -130,7 +156,6 @@ footer {
 footer p {
   color: white;
   text-align: center;
-  padding-top: 24px;
   opacity: 0.9;
   font-size: 18px;
 }
