--- a/scss/components/_containerBotao.scss
+++ b/scss/components/_containerBotao.scss
@@ -19,7 +19,7 @@
   outline: none;
   padding: 10px 15px;
   border-radius: 35px;
-  background-color: var.$cor-vermelhoEscuro;
+  background-color: #0177ad;
   text-align: center;
   font-weight: bold;
   font-size: 14px;
@@ -57,6 +57,24 @@
 
 .button-conhecer {
   background-color: var.$cor-vermelhoClaro;
+  color: var.$cor-branco;
+  line-height: 1;
+  font-size: 15px;
+  text-align: center;
+  padding: 10px;
+}
+
+.button-conhecer2 {
+  background-color: #04579b;
+  color: var.$cor-branco;
+  line-height: 1;
+  font-size: 15px;
+  text-align: center;
+  padding: 10px;
+}
+
+.button-conhecer3 {
+  background-color: #75241e;
   color: var.$cor-branco;
   line-height: 1;
   font-size: 15px;
