Atualização identidade visual

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -19,7 +19,7 @@ a {
 
 // BARRA PRINCIPAL.
   header {
-    background-color: var.$cor-fundoLogo;
+    background-color: var.$cor-primaria;
     padding: 20px;
   }
   
