--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -11,14 +11,23 @@ $cor-vermelhoEscuro: #620404;
 $cor-vermelhoMedio: #7D0808;
 $cor-vermelhoClaro: #D00B0B;
 $cor-cinzaEscuro: #333333;
+$cor-primaria: #BB1F1F;
+$cor-secundaria: #620404;
 
 //* CORES SECUNDÁRIAS
 $cor-branco: #ffff;
 $cor-preto: #000000;
+$cor-nav: #E1E4E7;
+
+//  primaria
+//  secundária
+//  terceriza
 
 //----------------------------------------------------------------
 //                      TIPOS DE FONTE DE TEXTO
 //----------------------------------------------------------------
+
+// Sailors (Fonte da Logo)
 
 /// Família de fonte regular
 /// @type Lista
