--- a/scss/style.css
+++ b/scss/style.css
@@ -15,7 +15,7 @@ a {
 }
 
 header {
-  background-color: #EFEEEC;
+  background-color: #BB1F1F;
   padding: 20px;
 }
 
@@ -84,44 +84,14 @@ section h2 {
   font-weight: bold;
   font-size: 14px;
   margin-top: 15px;
-  margin-bottom: 20px;
-}
-
-.button-container2 {
-  border: 0;
-  outline: none;
-  padding: 10px 15px;
-  border-radius: 35px;
-  background-color: #0177ad;
-  text-align: center;
-  font-weight: bold;
-  font-size: 14px;
-  margin-top: 15px;
-  margin-bottom: 20px;
-}
-
-.button-container3 {
-  border: 0;
-  outline: none;
-  padding: 10px 15px;
-  border-radius: 35px;
-  background-color: transparent;
-  text-align: center;
-  font-weight: bold;
-  font-size: 14px;
-  margin-top: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .button-group {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-top: 32px;
-}
-
-.button {
-  margin-right: 20px; /* Espaço entre os botões */
+  margin-top: 10px;
 }
 
 .button:last-child {
@@ -137,26 +107,36 @@ section h2 {
   padding: 10px;
 }
 
-.button-conhecer2 {
-  background-color: #04579b;
-  color: white;
-  line-height: 1;
-  font-size: 15px;
-  text-align: center;
-  padding: 10px;
-}
-
-.button-conhecer3 {
-  background-color: #75241e;
-  color: white;
-  line-height: 1;
-  font-size: 15px;
-  text-align: center;
-  padding: 10px;
-}
-
 .button-conhecer:hover {
   background-color: #7D0808;
+  color: white;
+}
+
+/* Estilos de botão */
+.button-container2 {
+  border: 0;
+  outline: none;
+  padding: 5px 0px;
+  border-radius: 35px;
+  background-color: transparent;
+  text-align: left;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+.button-conhecer2 {
+  background-color: #047591;
+  color: white;
+  line-height: 1;
+  font-size: 15px;
+  text-align: left;
+  padding: 10px;
+}
+
+.button-conhecer2:hover {
+  background-color: #033744;
   color: white;
 }
 
@@ -179,7 +159,7 @@ footer p {
 }
 
 .header-logo img {
-  max-width: 350px; /* Defina o tamanho desejado para a largura máxima da imagem */
+  max-width: 270px; /* Defina o tamanho desejado para a largura máxima da imagem */
   height: auto; /* Mantém a proporção de altura da imagem */
   margin: auto;
 }
@@ -193,7 +173,7 @@ header {
 }
 
 .header-logo {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 @media screen and (max-width: 600px) {
@@ -232,14 +212,14 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  color: #D00B0B;
+  color: #E1E4E7;
   font-size: 16px;
   font-weight: 600;
   font-family: "Roboto Slab", serif, "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 nav ul li a:hover {
-  color: #620404;
+  color: white;
 }
 
 section ul {
